...
            android:background="@color/grey"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cardViewTitle"
        style="@style/Git_Header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_marginTop="@dimen/card_image_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewImageContainer" />

    <TextView
        android:id="@+id/cardViewDescription"
        style="@style/Git_Body"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/card_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
